Update index.html for web-99 feature

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-test file v1
+test file v2 - web-99 feature
 
-asfafas
+Updated content for testing PR workflow
+This change was made in branch web-99
